--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="./app/css/index.css">
     <link rel="stylesheet" type="text/css" href="./app/css/home-page.css">
     <link rel="stylesheet" type="text/css" href="./app/css/about-me-page.css">
+    <link rel="stylesheet" type="text/css" href="./app/css/projects-page.css">
     <link rel="stylesheet" type="text/css" href="./app/css/commonStyles.css">
     <!-- <link rel="stylesheet" type="text/css" href="./app/css/app-font.css"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mulish">
@@ -79,19 +80,22 @@
 
             <div id="about-me-image-list-container">
                 <div class="about-me-image-container">
-                    <img class="about-me-image-list-item" src="./app/resources/images/pictures/imgSubProfilePicture_02.jpg"/>
+                    <img class="about-me-image-list-item"
+                        src="./app/resources/images/pictures/imgSubProfilePicture_02.jpg" />
                     <div class="about-me-image-overlay-container">
                         <h2 class="about-me-image-overlay-text">Who I was!</h2>
                     </div>
                 </div>
-                <div class="about-me-image-container" style="margin-left: 10px; margin-right: 10px;" >
-                    <img class="about-me-image-list-item" src="./app/resources/images/pictures/imgSubProfilePicture_01.jpg" />
+                <div class="about-me-image-container" style="margin-left: 10px; margin-right: 10px;">
+                    <img class="about-me-image-list-item"
+                        src="./app/resources/images/pictures/imgSubProfilePicture_01.jpg" />
                     <div class="about-me-image-overlay-container">
                         <h2 class="about-me-image-overlay-text">In a confused state?</h2>
                     </div>
                 </div>
                 <div class="about-me-image-container">
-                    <img class="about-me-image-list-item" src="./app/resources/images/pictures/imgSubProfilePicture_03.jpg"/>
+                    <img class="about-me-image-list-item"
+                        src="./app/resources/images/pictures/imgSubProfilePicture_03.jpg" />
                     <div class="about-me-image-overlay-container">
                         <h2 class="about-me-image-overlay-text">What I am now.</h2>
                     </div>
@@ -122,7 +126,49 @@
         </div>
 
         <!-- Projects -->
-        <div id="projects-container" class="details-container" style="background-color: bisque;"></div>
+        <div id="projects-container">
+
+            <div id="projects-grid-layout">
+
+
+                <div class="projects-grid-item">
+                    <img class="projects-grid-item-bg-image"
+                        src="https://static.scientificamerican.com/sciam/cache/file/32472ED8-8A08-49F5-9A2AB70DA387E5B7_source.jpg?w=590&h=800&BC7D68E0-B303-4BF3-95BFF7B0071DC23D">
+                    <div class="projects-grid-item-content-container">
+                        <h1 style="color: white; margin-bottom: 10px; margin-left: 10px;">TEST</h1>
+                    </div>
+
+                    <div style="display: flex;
+                    position: absolute;
+                    width: 100%; 
+                    height: 100%;
+                    flex-direction: column;
+                    background: linear-gradient(black, transparent);
+                    align-items: center;
+                    justify-content: center;
+                    ">
+
+                    <div style="height: 70px; display: flex; align-items: center;">
+                        <a href="https://www.facebook.com/">
+                        <img src="https://raw.githubusercontent.com/ravanar-sk/MyProfile-assets/main/iconApple.png" style="width: 50px; height: 50px; object-fit: contain; margin-left: 5px; margin-right: 5px;"/>
+                    </a>
+                    <a href="https://www.facebook.com/">
+                        <img src="https://raw.githubusercontent.com/ravanar-sk/MyProfile-assets/main/iconAndroid.png" style="width: 50px; height: 50px; object-fit: contain; margin-left: 5px; margin-right: 5px;"/>
+                    </a>
+                        <a href="https://www.facebook.com/">
+                        <img src="https://raw.githubusercontent.com/ravanar-sk/MyProfile-assets/181cc1027485d870fbbef196955c1af9d37ca09b/iconReactNative.svg" style="width: 50px; height: 50px; object-fit: contain; margin-left: 5px; margin-right: 5px;"/>
+                    </a>
+                        <a href="https://www.facebook.com/">
+                        <img src="https://raw.githubusercontent.com/ravanar-sk/MyProfile-assets/main/iconWeb.png" style="width: 50px; height: 50px; object-fit: contain; margin-left: 5px; margin-right: 5px;"/>
+                    </a>
+                    </div>
+
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
 
         <!-- education -->
         <div id="education-container" class="details-container" style="background-color: cornflowerblue;"></div>
@@ -437,9 +483,11 @@
 
     </div>
     <script type="text/javascript" src="./app/resources/json/user-data.js"></script>
+    <script type="text/javascript" src="./app/resources/json/projects.js"></script>
     <script src="./app/scripts/index.js"></script>
     <script src="./app/scripts/home-page.js"></script>
     <script src="./app/scripts/about-me-page.js"></script>
+    <script src="./app/scripts/projects-page.js"></script>
 </body>
 
 </html>
