--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div id="projects-grid-layout">
 
 
-                <div class="projects-grid-item">
+                <!-- <div class="projects-grid-item">
                     <img class="projects-grid-item-bg-image"
                         src="https://static.scientificamerican.com/sciam/cache/file/32472ED8-8A08-49F5-9A2AB70DA387E5B7_source.jpg?w=590&h=800&BC7D68E0-B303-4BF3-95BFF7B0071DC23D">
                     <div class="projects-grid-item-content-container">
@@ -164,7 +164,7 @@
                     </div>
 
                     </div>
-                </div>
+                </div> -->
 
 
             </div>
