--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="./app/css/home-page.css">
     <link rel="stylesheet" type="text/css" href="./app/css/about-me-page.css">
     <link rel="stylesheet" type="text/css" href="./app/css/projects-page.css">
+    <link rel="stylesheet" type="text/css" href="./app/css/education.css">
     <link rel="stylesheet" type="text/css" href="./app/css/commonStyles.css">
     <!-- <link rel="stylesheet" type="text/css" href="./app/css/app-font.css"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mulish">
@@ -171,7 +172,30 @@
         </div>
 
         <!-- education -->
-        <div id="education-container" class="details-container" style="background-color: cornflowerblue;"></div>
+        <div id="education-container" class="details-container">
+
+            <!-- <div style="display: flex; flex-direction: column; position: relative;">
+
+                <div style="display: flex; flex-direction: row; align-items: stretch;">
+                    <h4 style="color: white; flex: 0.15; text-align: right;  margin: 0; align-self: center;">2014</h4>
+                    <div style="width: 30px; display: flex; align-items: center; justify-content: center; position: relative;">
+                        <div style="position: absolute; width: 1px; height: 50%; bottom: 0; z-index: 0; background-color: white;"></div>
+                        <div style="width: 10px; height: 10px; border-radius: 5px; z-index: 1; background-color: white;"> </div>
+                    </div>
+                    <h2 style="color: white; flex: 1;margin: 0; align-self: center;">B.Tech</h2>
+                </div>
+
+                <div style="display: flex; flex-direction: row; align-items: stretch;">
+                    <h4 style="color: white; flex: 0.15; text-align: right; margin: 0;"></h4>
+                    <div style=" width: 30px;  display: flex; justify-content: center;">
+                        <div style="width: 1px; height: 100%; background-color: white; position: relative;"></div>
+                    </div>
+                    <h4 style="color: white; flex: 1; margin: 0; margin-top: 10px;">Kerala University - 6.5 CGPA</h4>
+                </div>
+
+            </div> -->
+
+        </div>
 
         <!-- work -->
         <div id="work-container" class="details-container" style="background-color: darkolivegreen;"></div>
@@ -484,10 +508,12 @@
     </div>
     <script type="text/javascript" src="./app/resources/json/user-data.js"></script>
     <script type="text/javascript" src="./app/resources/json/projects.js"></script>
+    <script type="text/javascript" src="./app/resources/json/work-data.js"></script>
     <script src="./app/scripts/index.js"></script>
     <script src="./app/scripts/home-page.js"></script>
     <script src="./app/scripts/about-me-page.js"></script>
     <script src="./app/scripts/projects-page.js"></script>
+    <script src="./app/scripts/education.js"></script>
 </body>
 
 </html>
