--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="./app/css/about-me-page.css">
     <link rel="stylesheet" type="text/css" href="./app/css/projects-page.css">
     <link rel="stylesheet" type="text/css" href="./app/css/education.css">
+    <link rel="stylesheet" type="text/css" href="./app/css/workDetails.css">
     <link rel="stylesheet" type="text/css" href="./app/css/commonStyles.css">
     <!-- <link rel="stylesheet" type="text/css" href="./app/css/app-font.css"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mulish">
@@ -174,319 +175,33 @@
         <!-- education -->
         <div id="education-container" class="details-container">
 
-            <!-- <div style="display: flex; flex-direction: column; position: relative;">
+            <!-- <div style="display: flex; flex-direction: row; position: relative; background-color: blue;">
 
-                <div style="display: flex; flex-direction: row; align-items: stretch;">
-                    <h4 style="color: white; flex: 0.15; text-align: right;  margin: 0; align-self: center;">2014</h4>
-                    <div style="width: 30px; display: flex; align-items: center; justify-content: center; position: relative;">
-                        <div style="position: absolute; width: 1px; height: 50%; bottom: 0; z-index: 0; background-color: white;"></div>
-                        <div style="width: 10px; height: 10px; border-radius: 5px; z-index: 1; background-color: white;"> </div>
-                    </div>
-                    <h2 style="color: white; flex: 1;margin: 0; align-self: center;">B.Tech</h2>
+                <h2 style="width: 100px;color: white;  text-align: end; margin: 0; background-color: chocolate;">2014</h2>
+                <div style="width: 1px; margin-left: 10px; margin-right: 10px; background: radial-gradient(white, transparent);"></div>
+                <div style="flex: 1;flex-direction: column;">
+                    <h2 style="color: white; flex: 1;margin: 0; align-self: center;">UKF College of Engineering (Kerala University)</h2>
+                    <h3 style="color: white; flex: 1; margin: 0; margin-top: 10px; opacity: 0.7;">B.Tech - Computer Science</h3>
+                    <h4 style="color: white; flex: 1; margin: 0; margin-top: 10px; opacity: 0.5;">6.5 CGPA</h4>
                 </div>
+            </div>
 
-                <div style="display: flex; flex-direction: row; align-items: stretch;">
-                    <h4 style="color: white; flex: 0.15; text-align: right; margin: 0;"></h4>
-                    <div style=" width: 30px;  display: flex; justify-content: center;">
-                        <div style="width: 1px; height: 100%; background-color: white; position: relative;"></div>
-                    </div>
-                    <h4 style="color: white; flex: 1; margin: 0; margin-top: 10px;">Kerala University - 6.5 CGPA</h4>
-                </div>
-
+            <div style="display: flex; flex-direction: row; position: relative; margin-top: 10px; margin-bottom: 10px; ">
+                <div style="width: 100px;"></div>
+                <div style="flex: 1; height: 1px; background: linear-gradient(to right, white, transparent);"></div>
             </div> -->
 
+        
         </div>
 
         <!-- work -->
-        <div id="work-container" class="details-container" style="background-color: darkolivegreen;"></div>
+        <div id="work-container" class="details-container"></div>
 
         <!-- Hobbies -->
         <div id="hobbies-container" class="details-container" style="background-color: tomato;"></div>
 
         <!-- gallery -->
         <div id="gallery-container" class="details-container" style="background-color: purple;"></div>
-
-
-
-        <div id="education-details">
-            <h1 class=" main-heading">Education Details:</h1>
-            <div>
-                <h1 class="education-sub-heading">B.Tech - Computer Science - from Kerala University</h1>
-                <h2 class="education-description"> I studied at UKF College of Engineering and Technology affiliated to
-                    Kerala University.</h2>
-            </div>
-
-            <div>
-                <h1 class="education-sub-heading">12th - Science - Maths -Computer Science - CBSE</h1>
-                <h2 class="education-description"> I studied at Sree Narayana Trusts Central School, Kollam.</h2>
-            </div>
-
-            <div>
-                <h1 class="education-sub-heading">10th - Science - Maths - CBSE</h1>
-                <h2 class="education-description"> I studied at Sree Narayana Trusts Central School, Kollam.</h2>
-            </div>
-        </div>
-
-        <div id="work-details">
-            <h1 class=" main-heading">Work Details:</h1>
-            <div>
-                <a href="https://www.experionglobal.com/" target="_blank">
-                    <h1 class="work-details-sub-heading">Experion Technologies, Technopark, Trivandrum</h1>
-                </a>
-                <h2 class="work-details-sub-heading">Mobile Application Developer</h2>
-                <h4 class="work-details-duration">Feb 2019 - present(1y 1m)</h4>
-
-                <div class="projects-container">
-                    <h2 class="projects-text">projects:</h2>
-                    <div class="projects-sub-container-right">
-
-                        <div>
-                            <h2>MapHabit</h2>
-                            <h3>A React-Native application for people with dementia to help with activities in their
-                                life with
-                                the help of a virtual support partner.</h3>
-
-                            <div>
-                                <a href="https://apps.apple.com/us/app/maphabit/id1466187296" target="_blank">
-                                    <img style="width: 30px; height: 30px;"
-                                        src="./app/resources/images/icons/iconApple.png" />
-                                </a>
-                                <a href="https://play.google.com/store/apps/details?id=com.maphabitmobileapp&hl=en_IN"
-                                    target="_blank">
-                                    <img style="width: 30px; height: 30px;"
-                                        src="./app/resources/images/icons/iconAndroid.png" />
-                                </a>
-                            </div>
-
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-
-
-            <div>
-                <a href="https://www.zoondia.com/" target="_blank">
-                    <h1 class="work-details-sub-heading">Zoondia Software, Technopark, Trivandrum</h1>
-                </a>
-                <h2 class="work-details-sub-heading">iOS & Android Mobile Application Developer</h2>
-                <h4 class="work-details-duration">Dec 2015 – Feb 2019(3y 3m)</h4>
-
-                <div class="projects-container">
-                    <h2 class="projects-text">projects:</h2>
-                    <div class="projects-sub-container-right">
-
-                        <div>
-                            <h2>MATCHBOXX</h2>
-                            <h3>A social networking iOS application where you could meet sport enthusiasts, such as
-                                Coach,
-                                Teams, Fans and interact with them over personal and group chat, post on their feeds,
-                                follow them, comment on their feeds and most importantly you could schedule matches
-                                between users or teams.</h3>
-
-                        </div>
-
-                        <div>
-                            <h2>PLANSMILE</h2>
-                            <h3>An iOS offline medical application used to analyze, and provide treatment solutions in
-                                the form of PDF reports.</h3>
-                        </div>
-
-                        <div>
-                            <h2>BIZCLIPS</h2>
-                            <h3>A professional social networking iOS application where you could publicize job openings
-                                if you are an entrepreneur, or market your skills as a job seeker using Videos as the
-                                media of communication.</h3>
-
-                            <div>
-                                <a href="https://apps.apple.com/il/app/bizclips/id1315696803" target="_blank">
-                                    <img style="width: 30px; height: 30px;"
-                                        src="./app/resources/images/icons/iconApple.png" />
-                                </a>
-
-                            </div>
-                        </div>
-
-                        <div>
-                            <h2>SAP</h2>
-                            <h3>An iOS application used to authenticate users in a SAP technical event using QR code and
-                                REST API
-                                authentication.</h3>
-                        </div>
-
-                        <div>
-                            <h2>HASANAT</h2>
-                            <h3>An application used for donation based crowdfunding for middle east location. It
-                                includes features like Payment Gateway.</h3>
-
-                            <div>
-                                <a href="https://apps.apple.com/us/app/%D8%AD%D8%B3%D9%86%D8%A7%D8%AA-hasanat/id1223319991"
-                                    target="_blank">
-                                    <img style="width: 30px; height: 30px;"
-                                        src="./app/resources/images/icons/iconApple.png" />
-                                </a>
-                                <a href="https://play.google.com/store/apps/details?id=com.applab.hasanat&hl=en_IN"
-                                    target="_blank">
-                                    <img style="width: 30px; height: 30px;"
-                                        src="./app/resources/images/icons/iconAndroid.png" />
-                                </a>
-                            </div>
-                        </div>
-
-                        <div>
-                            <h2>EDUCATION ABOVE ALL</h2>
-                            <h3>An application used for donation based crowdfunding for middle east location. It
-                                includes features like Payment Gateway.</h3>
-                        </div>
-
-                        <div>
-                            <h2>QATAR CANCER SOCIETY</h2>
-                            <h3>An application used for donation based crowdfunding for middle east location. It
-                                includes features like Payment Gateway.</h3>
-
-                            <div>
-                                <a href="https://apps.apple.com/us/app/qatar-cancer-society/id1448365698"
-                                    target="_blank">
-                                    <img style="width: 30px; height: 30px;"
-                                        src="./app/resources/images/icons/iconApple.png" />
-                                </a>
-                                <a href="https://play.google.com/store/apps/details?id=com.applab.QCS&hl=en_US"
-                                    target="_blank">
-                                    <img style="width: 30px; height: 30px;"
-                                        src="./app/resources/images/icons/iconAndroid.png" />
-                                </a>
-                            </div>
-                        </div>
-
-                        <div>
-                            <h2>YOU GOT A GIFT</h2>
-                            <h3>An iOS application to send gift cards to your friends and family to use in authorised
-                                stores.</h3>
-
-                            <div>
-                                <a href="https://apps.apple.com/ae/app/yougotagift-com/id1003784085" target="_blank">
-                                    <img style="width: 30px; height: 30px;"
-                                        src="./app/resources/images/icons/iconApple.png" />
-                                </a>
-                            </div>
-                        </div>
-
-                        <div>
-                            <h2>DIETHUB</h2>
-                            <h3>A client application for customers who are subscribed to DietHub services. It includes a
-                                private virtual online coach to monitor your health and diet. Also includes personal
-                                chat.</h3>
-
-                            <div>
-                                <a href="https://itunes.apple.com/qa/app/diethub/id1220736852?mt=8)" target="_blank">
-                                    <img style="width: 30px; height: 30px;"
-                                        src="./app/resources/images/icons/iconApple.png" />
-                                </a>
-                                <a href="https://play.google.com/store/apps/details?id=com.makers.diethub"
-                                    target="_blank">
-                                    <img style="width: 30px; height: 30px;"
-                                        src="./app/resources/images/icons/iconAndroid.png" />
-                                </a>
-                            </div>
-                        </div>
-
-                        <div>
-                            <h2>DIETHUB Coach</h2>
-                            <h3>A client application for Coach who act as virtual coaches to DietHub users, having
-                                featured to set diet and monitor them including personal chat (audio, image, text) for
-                                communication.</h3>
-
-                            <div>
-                                <a href="https://itunes.apple.com/qa/app/diethub-coach/id1257393544?mt=8"
-                                    target="_blank">
-                                    <img style="width: 30px; height: 30px;"
-                                        src="./app/resources/images/icons/iconApple.png" />
-                                </a>
-                                <a href="https://play.google.com/store/apps/details?id=com.makers.diethubcoach"
-                                    target="_blank">
-                                    <img style="width: 30px; height: 30px;"
-                                        src="./app/resources/images/icons/iconAndroid.png" />
-                                </a>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-
-            <div>
-                <a href="https://www.dhisigma.com/" target="_blank">
-                    <h1 class="work-details-sub-heading">DHI Logics, Kaloor, Ernakulam</h1>
-                </a>
-                <h2 class="work-details-sub-heading">Javascript Developers</h2>
-                <h4 class="work-details-duration">April 2015 – Oct 2015(5m)</h4>
-
-                <div class="projects-container">
-                    <h2 class="projects-text">projects:</h2>
-                    <div class="projects-sub-container-right">
-
-                        <div>
-                            <h2>DHI Cubes</h2>
-                            <h3>Design and Develop UI pages for websites using DHI Cubes, an interactive customizable
-                                web front end design and
-                                development tool. Languages used: Java, Javascript, C++</h3>
-
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-
-            <div>
-                <h1 class="work-details-sub-heading">FREELANCE CONSULTANT since graduation</h1>
-                <h2 class="work-details-sub-heading">iOS, Android and React-Native.</h2>
-
-                <div class="projects-container">
-                    <h2 class="projects-text">projects:</h2>
-                    <div class="projects-sub-container-right">
-
-                        <div>
-                            <h2>ONEPORT</h2>
-                            <h3>An iOS application to be used by employees and residents of OnePort settlements in Qatar
-                                for flat
-                                maintenance.</h3>
-
-                            <div>
-                                <a href="https://apps.apple.com/us/app/oneport/id1486790154" target="_blank">
-                                    <img style="width: 30px; height: 30px;"
-                                        src="./app/resources/images/icons/iconApple.png" />
-                                </a>
-                            </div>
-                        </div>
-
-                        <div>
-                            <h2>AL JNOUB</h2>
-                            <h3>A React-Native application to reserve camping ground in the southern reserve of Qatar.
-                            </h3>
-
-                            <div>
-                                <a href="https://apps.apple.com/in/app/%D9%85%D8%AD%D9%85%D9%8A%D8%A9-%D8%A7%D9%84%D
-                                8%AC%D9%86%D9%88%D8%A8/id1440043523" target="_blank">
-                                    <img style="width: 30px; height: 30px;"
-                                        src="./app/resources/images/icons/iconApple.png" />
-                                </a>
-                                <a href="https://play.google.com/store/apps/details?id=com.applab.aljnoub"
-                                    target="_blank">
-                                    <img style="width: 30px; height: 30px;"
-                                        src="./app/resources/images/icons/iconAndroid.png" />
-                                </a>
-                            </div>
-                        </div>
-
-                        <div>
-                            <h2>EMPORIUM</h2>
-                            <h3>An e-commerce React-Native application for GCC by emporium group.</h3>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
 
 
         <div id="hobbies">
@@ -514,6 +229,7 @@
     <script src="./app/scripts/about-me-page.js"></script>
     <script src="./app/scripts/projects-page.js"></script>
     <script src="./app/scripts/education.js"></script>
+    <script src="./app/scripts/workDetail.js"></script>
 </body>
 
 </html>
