--- a/index.html
+++ b/index.html
@@ -191,34 +191,47 @@
                 <div style="flex: 1; height: 1px; background: linear-gradient(to right, white, transparent);"></div>
             </div> -->
 
-        
+
         </div>
 
         <!-- work -->
-        <div id="work-container" class="details-container"></div>
-
-        <!-- Hobbies -->
-        <div id="hobbies-container" class="details-container" style="background-color: tomato;"></div>
-
-        <!-- gallery -->
-        <div id="gallery-container" class="details-container" style="background-color: purple;"></div>
+        <div id="work-container" class="details-container">
 
 
-        <div id="hobbies">
-            <h1 class=" main-heading">Hobbies:</h1>
+            <!-- <div style="display: flex; flex-direction: row; ">
+                <div style=" width: 150px; display: flex; flex-direction: column;   position: relative;">
+                    <h2 style="color: white;  margin: 0;  text-align: end;">2014</h2>
+                    <h2 style="color: white;  margin: 0;  text-align: end;">-</h2>
+                    <h2 style="color: white;  margin: 0;  text-align: end;">2018</h2>
+                </div>
+                <div style="width: 1px; margin-left: 10px; margin-right: 10px; background: radial-gradient(white, transparent);"></div>
+                <div style="display: flex; flex: 1;flex-direction: column; ">
+                    <div style="color: white;  align-self: flex-start;  overflow: hidden; font-size: x-large;">UKF
+                        College of Engineering (Kerala University) asdkjahdkjahkjdhaskjd
+                        hajskhdkjhakjhfjkadhfjkhsdjfhksdfjhkh iuufhgiu f gjh gkhd gh sdfkjsdh fkjhs dkfjhsdfh </div>
+                    <h3 style="color: white;  margin: 0; margin-top: 10px; opacity: 0.7;">B.Tech - Computer Science</h3>
+                    <h4 style="color: white;  margin: 0; margin-top: 10px; opacity: 0.5;">6.5 CGPA</h4>
 
-            <ul>
-                <li class="hobbies-title">
-                    <h1>Cycling</h1>
-                    <p class="hobbies-description">I recently started cycling as an alternative for exercise, but now it
-                        kind of changed into a hobby
-                        which I could not let go.</p>
-                </li>
-            </ul>
+                    <div style="color: white; margin-top: 10px;; align-self: flex-start;  overflow: hidden; font-size: small;opacity: 0.25;">UKF
+                        College of Engineering (Kerala University) asdkjahdkjahkjdhaskjd
+                        hajskhdkjhakjhfjkadhfjkhsdjfhksdfjhkh iuufhgiu f gjh gkhd gh sdfkjsdh fkjhs dkfjhsdfh </div>
+                </div>
+            </div>
+
+            <div
+                style="display: flex; flex-direction: row; position: relative; margin-top: 10px; margin-bottom: 10px; ">
+                <div style="width: 100px;"></div>
+                <div style="flex: 1; height: 1px; background: linear-gradient(to right, transparent, white);"></div>
+            </div> -->
+
 
         </div>
 
+        <!-- Hobbies -->
+        <!-- <div id="hobbies-container" class="details-container" style="background-color: tomato;"></div> -->
 
+        <!-- gallery -->
+        <!-- <div id="gallery-container" class="details-container" style="background-color: purple;"></div> -->
 
     </div>
     <script type="text/javascript" src="./app/resources/json/user-data.js"></script>
