Work details alignments

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
             <a href="#work-container">
                 <h3 class="side-menu-item side-menu-sub-title">Work</h3>
             </a>
-            <a href="#hobbies-container">
+            <!-- <a href="#hobbies-container">
                 <h3 class="side-menu-item side-menu-sub-title">Hobbies</h3>
-            </a>
-            <a href="#gallery-container">
+            </a> -->
+            <!-- <a href="#gallery-container">
                 <h3 class="side-menu-item side-menu-sub-title">Gallery</h3>
-            </a>
+            </a> -->
 
         </div>
 
@@ -173,7 +173,7 @@
         </div>
 
         <!-- education -->
-        <div id="education-container" class="details-container">
+        <div id="education-container" >
 
             <!-- <div style="display: flex; flex-direction: row; position: relative; background-color: blue;">
 
@@ -195,7 +195,7 @@
         </div>
 
         <!-- work -->
-        <div id="work-container" class="details-container">
+        <div id="work-container" >
 
 
             <!-- <div style="display: flex; flex-direction: row; ">
