Updated About me page

--- a/index.html
+++ b/index.html
@@ -85,46 +85,42 @@
                     <img class="about-me-image-list-item"
                         src="./app/resources/images/pictures/imgSubProfilePicture_02.jpg" />
                     <div class="about-me-image-overlay-container">
-                        <h2 class="about-me-image-overlay-text">Who I was!</h2>
+                        <!-- <h2 class="about-me-image-overlay-text">Who I was!</h2> -->
                     </div>
                 </div>
                 <div class="about-me-image-container" style="margin-left: 10px; margin-right: 10px;">
                     <img class="about-me-image-list-item"
                         src="./app/resources/images/pictures/imgSubProfilePicture_01.jpg" />
                     <div class="about-me-image-overlay-container">
-                        <h2 class="about-me-image-overlay-text">In a confused state?</h2>
+                        <!-- <h2 class="about-me-image-overlay-text">In a confused state?</h2> -->
                     </div>
                 </div>
                 <div class="about-me-image-container">
                     <img class="about-me-image-list-item"
                         src="./app/resources/images/pictures/imgSubProfilePicture_03.jpg" />
                     <div class="about-me-image-overlay-container">
-                        <h2 class="about-me-image-overlay-text">What I am now.</h2>
+                        <!-- <h2 class="about-me-image-overlay-text">What I am now.</h2> -->
                     </div>
                 </div>
             </div>
 
-            <dic style="display: flex;  width: 90%;">
+            <dic style="display: flex; flex-direction: column;  width: 90%;">
 
-                <dic style="display: flex; flex-direction: column; flex: 1;">
-                    <h1 id="about-me-name" style="color: white;">SARAVANA KUMAR K R</h1>
-                    <p id="about-me-description" style="color: white; opacity: 0.5;">
+                <div style="display: flex; flex-direction: column; flex: 1;">
+                    <!-- <h1 id="about-me-name" style="color: white;">SARAVANA KUMAR K R</h1> -->
+                    <h3 id="about-me-description" style="color: white; opacity: 0.75;">
                         Dummy
-                    </p>
-                </dic>
+                    </h3>
+                </div>
 
-                <dic style="display: flex; flex-direction: column; flex: 1; margin-left: 20px; margin-top: 30px;">
-
+                <div style="display: flex; flex-direction: column; flex: 1; ">
                     <table>
                         <tbody id="about-me-personal-details-table-body">
                             <!-- All required data would be added dynamically -->
                         </tbody>
                     </table>
-
-                </dic>
-
+                </div>
             </dic>
-
         </div>
 
         <!-- Projects -->
