--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
 
             <h1 class="side-menu-item side-menu-title">INDIA</h1>
             <a href="#home-container">
-                <h3 class="side-menu-item side-menu-sub-title">HOME</h3>
+                <h3 id="id_sidemenu_home" class="side-menu-item side-menu-sub-title">HOME</h3>
             </a>
 
             <a href="#about-me-container">
-                <h3 class="side-menu-item side-menu-sub-title">ABOUT</h3>
+                <h3 id="id_sidemenu_about"  class="side-menu-item side-menu-sub-title">ABOUT</h3>
             </a>
             <a href="#projects-container">
-                <h3 class="side-menu-item side-menu-sub-title">Projects</h3>
+                <h3 id="id_sidemenu_projects"  class="side-menu-item side-menu-sub-title">Projects</h3>
             </a>
             <a href="#education-container">
-                <h3 class="side-menu-item side-menu-sub-title">Education</h3>
+                <h3 id="id_sidemenu_education"  class="side-menu-item side-menu-sub-title">Education</h3>
             </a>
             <a href="#work-container">
-                <h3 class="side-menu-item side-menu-sub-title">Work</h3>
+                <h3 id="id_sidemenu_work"  class="side-menu-item side-menu-sub-title">Work</h3>
             </a>
             <!-- <a href="#hobbies-container">
                 <h3 class="side-menu-item side-menu-sub-title">Hobbies</h3>
